IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
12/6/08: Eliminated 1 pixel shift and ability to shift image with mouse when
zoomed image fits exactly in window.

12/6/08: Slicer in centering mode will now stay exactly centered on model 
points when stepping through a contour.

12/5/08: Etomo error logs are now saved to $HOME/.etomologs unless the user
has ETOMO_LOG_DIR set.

12/4/08: In Etomo - Fiducial Model dialog, sending the View Skip List to 3dmod
when opening it with the Fix Fiducial Model button.  The View Skip List will
appear under the checkbox called "Ignore gaps at views:" in the Bead Fixer.

12/3/08: Turned models on when loading into 3dmod, so if the user turns it off
by mistake and doesn't know about 't', it will reappear when they reload it.

12/3/08: Fixed Copytomocom's handling of output sizes for sampling and final
aligned stack when images are being rotated by ~90 degrees, adjusted sample
positions to account for data loss from rotation, and fixed sample parameters
for very small input data.

12/3/08: Fixed field width of output in Maxjoinsize so that a shift of -1000
in Y does not screw everything up.

12/2/08: Made 3dmod detect a 3D FFT and not mirror it.

12/2/08: Changed Beadtrack to take true unbinned bead diameter and a binning
and compute the radius for centroid as well as modify box size appropriately.
Also changed Copytomocoms to feed into this properly and to give box sizes
up to 100 instead of stopping at 48.

12/2/08: In Etomo - Gold Erase, changed Better Radius to Fiducial Diameter.

12/2/08: Point values will now be stored when meshing a contour as a tube.

12/1/08: In Etomo added an options to Settings to default to montage.

12/1/08: Made imodfindbeads do kernel filtering with 0.85 ("smooth") as 
default.

12/1/08: Switched bead fixer autocentering to use correlation with a 
sobel-filtered model bead.

11/30/08: Reduced edge artifacts in some kernel filtering operations (e.g., 